[package]
name = "humble_port_scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.78"
async-stream = "0.3.5"
clap = { version = "4.4.11", features = ["derive"] }
futures-core = "0.3.30"
ipnet = "2.9.0"
thiserror = "1.0.56"
tokio = { version = "1.7", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tokio-test = "0.4.3"
